Change values to about

--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -19,7 +19,7 @@
 				<ul class="mb3">
 					<li><a href="/" class="link">Home</a></li>
 					<li><a href="/products" class="link">Our products</a></li>
-					<li><a href="/values" class="link">About</a></li>
+					<li><a href="/about" class="link">About</a></li>
 					<li><a href="/post" class="link">Blog</a></li>
 					<li><a href="/contact" class="link">Contact</a></li>
 				</ul>
