--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -9,7 +9,7 @@
 	<ul class="flex b grey-3">
 		<li><a href="/products" class="pa3 no-underline db">Products</a></li>
 
-		<li><a href="/values" class="pa3 no-underline db">Values</a></li>
+		<li><a href="/about" class="pa3 no-underline db">About</a></li>
 
 		<li><a href="/post" class="pa3 no-underline db">Blog</a></li>
 
