Update twitter link and social media we'll have

--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -37,9 +37,9 @@
 				<h3 class="f4 b lh-title mb2 primary">Social media</h3>
 				<ul class="mhn2">
 					{{ partial "social-icon" (dict "link" "#" "svg" "icons-facebook") }}
-					{{ partial "social-icon" (dict "link" "#" "svg" "icons-twitter") }}
-					{{ partial "social-icon" (dict "link" "#" "svg" "icons-instagram") }}
-					{{ partial "social-icon" (dict "link" "#" "svg" "icons-vimeo") }}
+					{{ partial "social-icon" (dict "link" "https://twitter.com/openvoicenet" "svg" "icons-twitter") }}
+					{{ partial "social-icon" (dict "link" "#" "svg" "icons-linkedin") }}
+					{{ partial "social-icon" (dict "link" "#" "svg" "icons-github") }}
 				</ul>
 			</div>
 
