--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -18,7 +18,7 @@
 				<h3 class="f4 b lh-title mb1 primary">Open Voice Network</h3>
 				<ul class="mb3">
 					<li><a href="/" class="link">Home</a></li>
-					<li><a href="/products" class="link">Our products</a></li>
+					<li><a href="/join" class="link">Our products</a></li>
 					<li><a href="/about" class="link">About</a></li>
 					<li><a href="/post" class="link">Blog</a></li>
 					<li><a href="/contact" class="link">Contact</a></li>
