--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -7,7 +7,7 @@
 
 	<!-- Primary Nav -->
 	<ul class="flex b grey-3">
-		<li><a href="/products" class="pa3 no-underline db">Products</a></li>
+		<li><a href="/join" class="pa3 no-underline db">Join</a></li>
 
 		<li><a href="/about" class="pa3 no-underline db">About</a></li>
 
