--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -4,9 +4,9 @@
 
 		<div class="measure-narrow center mb4">
 
-			<img src="/img/logo.svg" alt="OVN logo" class="db w4 center mb4 br0">
+			<img src="/img/logo.svg" alt="Open Voice Network logo" class="db w4 center mb4 br0">
 			<p class="f3 lh-title light-gray b tc mb2">Newsletter subscribe</p>
-			<p>Get awesome news from us in your inbox every two weeks. Be the first to learn about new products.</p>
+			<p>Get news from us in your inbox on a regular basis. Be the first to learn the latest with the OVN.</p>
 
 			{{ partial "newsletter-form" . }}
 
@@ -28,7 +28,6 @@
 			<div>
 				<h3 class="f4 b lh-title mb1 primary">Find out more</h3>
 				<ul class="mb3">
-					<li><a href="/post/jamaica-blue/" class="link">Latest offers</a></li>
 					<li><a href="/contact" class="link">Meet with us</a></li>
 				</ul>
 			</div>
