--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -2,7 +2,7 @@
 
 	<!-- Logo -->
 	<a href="/" class="pa3 db mr4 h-100 w3 flex-none">
-		<img src="/img/logo.svg" alt="Kaldi logo" class="br0 db mb0 w-70"/>
+		<img src="/img/logo.svg" alt="Open Voice Network logo" class="br0 db mb0 w-70"/>
 	</a>
 
 	<!-- Primary Nav -->
