Add GitHub link to footer

--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -38,7 +38,7 @@
 					{{ partial "social-icon" (dict "link" "#" "svg" "icons-facebook") }}
 					{{ partial "social-icon" (dict "link" "https://twitter.com/openvoicenet" "svg" "icons-twitter") }}
 					{{ partial "social-icon" (dict "link" "#" "svg" "icons-linkedin") }}
-					{{ partial "social-icon" (dict "link" "#" "svg" "icons-github") }}
+					{{ partial "social-icon" (dict "link" "https://github.com/open-voice-network" "svg" "icons-github") }}
 				</ul>
 			</div>
 
