--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -24,4 +24,6 @@
 	<meta property="og:image" content="/img/og-image.jpg">
 
 	<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+	{{ template "_internal/google_analytics_async.html" . }}
+
 </head>
