Fix about page to align left

--- a/site/layouts/section/about.html
+++ b/site/layouts/section/about.html
@@ -8,7 +8,7 @@
     {{ if modBool $index 2 }}
       {{ partial "media-block" $element }}
     {{ else }}
-      {{ partial "media-block-reverse" $element }}
+      {{ partial "media-block" $element }}
     {{ end }}
   {{ end }}
 
