Change working of button on homepage

--- a/site/layouts/partials/2-up.html
+++ b/site/layouts/partials/2-up.html
@@ -13,7 +13,7 @@
     </div>
 
     <div class="tc">
-      <a href="/join" class="btn raise">See all products</a>
+      <a href="/join" class="btn raise">Read more</a>
     </div>
   </div>
 </div>
