--- a/site/layouts/partials/newsletter-form.html
+++ b/site/layouts/partials/newsletter-form.html
@@ -1,7 +1,7 @@
-<form action="" class="flex-ns mb3">
+<form class="flex-ns mb3" name="newsletter" method="POST" data-netlify="true">
 
   <fieldset class="flex-auto mb2 mb0-ns mr2-ns" name="newsletter" action="newsletter-subscribe">
-    <input type="text" id="email" placeholder="Your email" class="w-100">
+    <input type="email" id="email" placeholder="Your email" class="w-100">
     <label for="email">Your email</label>
   </fieldset>
 
