--- a/site/layouts/partials/newsletter-form.html
+++ b/site/layouts/partials/newsletter-form.html
@@ -1,4 +1,4 @@
-<form class="flex-ns mb3" name="newsletter" method="POST" data-netlify="true">
+<form class="flex-ns mb3" name="newsletter" method="POST" netlify>
 
   <fieldset class="flex-auto mb2 mb0-ns mr2-ns" name="newsletter" action="newsletter-subscribe">
     <input type="hidden" name="form-name" value="newsletter" />
