Add name attribute to newsletter form

--- a/site/layouts/partials/newsletter-form.html
+++ b/site/layouts/partials/newsletter-form.html
@@ -2,7 +2,7 @@
 
   <fieldset class="flex-auto mb2 mb0-ns mr2-ns" name="newsletter" action="newsletter-subscribe">
     <input type="hidden" name="form-name" value="newsletter" />
-    <input type="email" id="email" placeholder="Your email" class="w-100">
+    <input type="email" name ="email" id="email" placeholder="Your email" class="w-100">
     <label for="email">Your email</label>
   </fieldset>
 
