--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -35,9 +35,9 @@
 			<div>
 				<h3 class="f4 b lh-title mb2 primary">Social media</h3>
 				<ul class="mhn2">
-					{{ partial "social-icon" (dict "link" "#" "svg" "icons-facebook") }}
+					{{ partial "social-icon" (dict "link" "https://www.facebook.com/Open-Voice-Network-103375474336837/" "svg" "icons-facebook") }}
 					{{ partial "social-icon" (dict "link" "https://twitter.com/openvoicenet" "svg" "icons-twitter") }}
-					{{ partial "social-icon" (dict "link" "#" "svg" "icons-linkedin") }}
+					{{ partial "social-icon" (dict "link" "https://www.linkedin.com/company/open-voice-network" "svg" "icons-linkedin") }}
 					{{ partial "social-icon" (dict "link" "https://github.com/open-voice-network" "svg" "icons-github") }}
 				</ul>
 			</div>
