Change open graph cover image

--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -26,7 +26,7 @@
 	<meta property="og:type" content="business.business">
 	<meta property="og:title" content="Open Voice Network | Voice for everyone">
 	<meta property="og:url" content="/">
-	<meta property="og:image" content="/img/og-image.jpg">
+	<meta property="og:image" content="/img/open-voice-network-branding.jpg">
   {{ template "_internal/google_analytics.html" . }}
   
   {{ if .IsHome }}
