Added the resources page

--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -11,6 +11,8 @@
 
 		<li><a href="/join" class="pa3 no-underline db">Join</a></li>
 
+		<li><a href="/resources" class="pa3 no-underline db">Resources</a></li>
+
 		<li><a href="/post" class="pa3 no-underline db">Blog</a></li>
 
 		<li><a href="/contact" class="pa3 no-underline db">Contact</a></li>
