Ready for review GH-23

--- a/site/layouts/section/resources.html
+++ b/site/layouts/section/resources.html
@@ -6,11 +6,8 @@
 
 {{ range $index, $element := .Params.resources }}
 
-  {{ if modBool $index 2 }}
-    {{ partial "media-block" $element }}
-  {{ else }}
-    {{ partial "media-block" $element }}
-  {{ end }}
+{{ partial "image-and-text" $element }}
+ 
 
 {{ end }}
 
