--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -1,23 +1,38 @@
-<nav class="overflow-x-scroll overflow-x-visible-ns flex justify-between items-center center bg-white divider-grey relative">
+<div class="divider-grey ">
+	<nav class="overflow-x-scroll overflow-x-visible-ns flex justify-between items-center center bg-white divider-grey relative">
 
-	<!-- Logo -->
-	<a href="/" class="pa3 db mr4 h-100 w3 flex-none">
-		<img src="/img/logo.svg" alt="Open Voice Network logo" class="br0 db mb0 w-70"/>
-	</a>
+		<!-- Logo -->
+		<a href="/" class="pa3 db mr4 h-100 w3 flex-none">
+			<img src="/img/logo.svg" alt="Open Voice Network logo" class="br0 db mb0 w-70"/>
+		</a>
 
-	<!-- Primary Nav -->
-	<ul class="flex b grey-3">
-		<li><a href="/about" class="pa3 no-underline db">About</a></li>
+		<!-- Primary Nav -->
+		<button type="buttom" class="collapse-btn">
+			<div class="bar1"></div>
+			<div class="bar2"></div>
+			<div class="bar3"></div>
+		</button>
 
-		<li><a href="/join" class="pa3 no-underline db">Join</a></li>
+		<ul class="navbar">
+			<li><a href="/about" class="">About</a></li>
+			<li><a href="/join" class="">Join</a></li>
+			<li><a href="/ambassadors" class="">Ambassadors</a></li>
+			<li><a href="/communities" class="">Communities</a></li>
+			<li><a href="/resources" class="">Resources</a></li>
+			<li><a href="/post" class="">Blog</a></li>
+			<li><a href="/contact" class="">Contact</a></li>
+		</ul>
 
-		<li><a href="/communities" class="pa3 no-underline db">Communities</a></li>
-
-		<li><a href="/resources" class="pa3 no-underline db">Resources</a></li>
-
-		<li><a href="/post" class="pa3 no-underline db">Blog</a></li>
-
-		<li><a href="/contact" class="pa3 no-underline db">Contact</a></li>
-	</ul>
-
-</nav>
+	</nav>
+	<div class="mobile">
+		<ul class="navbar dn">
+			<li><a href="/about" class="">About</a></li>
+			<li><a href="/join" class="">Join</a></li>
+			<li><a href="/ambassadors" class="">Ambassadors</a></li>
+			<li><a href="/communities" class="">Communities</a></li>
+			<li><a href="/resources" class="">Resources</a></li>
+			<li><a href="/post" class="">Blog</a></li>
+			<li><a href="/contact" class="">Contact</a></li>
+		</ul>
+	</div>
+</div>
