--- a/site/layouts/section/join.html
+++ b/site/layouts/section/join.html
@@ -2,30 +2,36 @@
 
 {{ partial "jumbotron" (dict "imageUrl" .Params.image "title" .Title) }}
 
-{{ partial "4-up" .Params.intro }}
-
-
-{{ with .Params.main }}
-<div class="mw7 center">
-  <div class="mw6 ph3 mb3">
-    <h3 class="f3 b lh-title mb2">{{ .heading }}</h3>
-    <p>{{ .description }}</p>
-  </div>
+<div class="bg-off-white pt4">
+  {{ range .Params.hardsell }}
+	<div class="mw7 center">
+		<h2 class="f2 b lh-title mb2">{{.heading}}</h2>
+		<p class="mb4 mw6">{{.description}}</p>
+	</div>
+  {{ end }}
 </div>
 
-<!-- Image grid -->
-{{ partial "image-grid" . }}
-{{ end }}
+<div class="pt4 pb4">
+{{ partial "blockquote" (index .Params.testimonials 1) }}
+</div>
 
-<div class="pb4">
-  {{ range .Params.testimonials }}
-    {{ partial "blockquote" . }}
-  {{ end }}
+{{ partial "table" .Params.pricing }}
+
+<div class="tc">
+<a href="/contact" class="btn w-100 w-auto-ns raise" >Contact Us To Join</a>
+</div>
+
+<div class="pt4 pb4">
+  {{ partial "blockquote" (index .Params.testimonials 0) }}
 </div>
 
 <!-- Full-width image -->
 <img src="{{ .Params.full_image }}" alt="" class="db w-100">
 
-{{ partial "table" .Params.pricing }}
+{{ partial "4-up" .Params.intro }}
+
+<div class="tc mb3">
+<a href="/contact" class="btn w-100 w-auto-ns raise" >Join Now</a>
+</div>
 
 {{ end }}
