--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -15,9 +15,12 @@
 
 		<ul class="navbar">
 			<li><a href="/about" class="">About</a></li>
-			<li><a href="/join" class="">Join</a></li>
-			<li><a href="/ambassadors" class="">Ambassadors</a></li>
-			<li><a href="/communities" class="">Communities</a></li>
+			<li><a href="/join" class="">Join</a>
+				<ul>
+					<li><a href="/ambassadors" class="">Ambassadors</a></li>
+					<li><a href="/communities" class="">Communities</a></li>
+				</ul>
+			</li>
 			<li><a href="/resources" class="">Resources</a></li>
 			<li><a href="/post" class="">Blog</a></li>
 			<li><a href="/contact" class="">Contact</a></li>
@@ -27,9 +30,12 @@
 	<div class="mobile">
 		<ul class="navbar dn">
 			<li><a href="/about" class="">About</a></li>
-			<li><a href="/join" class="">Join</a></li>
-			<li><a href="/ambassadors" class="">Ambassadors</a></li>
-			<li><a href="/communities" class="">Communities</a></li>
+			<li><a href="/join" class="">Join</a>
+				<ul>
+					<li><a href="/ambassadors" class="">Ambassadors</a></li>
+					<li><a href="/communities" class="">Communities</a></li>
+				</ul>
+			</li>
 			<li><a href="/resources" class="">Resources</a></li>
 			<li><a href="/post" class="">Blog</a></li>
 			<li><a href="/contact" class="">Contact</a></li>
