--- a/src/css/imports/_styles.css
+++ b/src/css/imports/_styles.css
@@ -13,3 +13,15 @@
     box-shadow: inset 0 -4px 0 var(--primary);
   }
 }
+
+
+/* home page jumbo */
+.pv5.pv6-l.ph3.bg-center.cover.home-img {
+    padding-top: 11rem;
+    padding-bottom: 5rem;
+}
+@media only screen and (max-width: 690px) {
+  .pv5.pv6-l.ph3.bg-center.cover.home-img {
+    background-position: 70%;  
+  }
+}
