--- a/src/css/imports/_styles.css
+++ b/src/css/imports/_styles.css
@@ -14,6 +14,10 @@
   }
 }
 
+ol{
+  list-style: decimal;
+  margin-left: 1.25em;
+}
 
 /* home page jumbo */
 .pv5.pv6-l.ph3.bg-center.cover.home-img {
