about us page updates with steering committee

--- a/site/layouts/partials/left-image-and-text.html
+++ b/site/layouts/partials/left-image-and-text.html
@@ -3,10 +3,12 @@
 		<div class="flex flex-column flex-row-sm items-start">
 
 			<div class="w4 order-0 mr2">
-				<img src={{.imageUrl}} alt="" class="mr2">
+				{{ if .imageUr }}<img src={{.imageUrl}} alt="" class="mr2">{{ end }}
 			</div>
 			<div class="w-80 order-2">
-				<h3 class="f3 b lh-title mb1">{{.heading}}</h3>
+				<h3 class="f3 b lh-title mb1">{{.heading}}
+				{{ if .subHeading}}<sub>{{.subHeading}}</sub>{{ end }}
+				</h3>
 				<p>{{.text}}</p>
 			</div>
 		</div>
