faq page with simple search

--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -21,7 +21,12 @@
 					<li><a href="/communities" class="">Communities</a></li>
 				</ul>
 			</li>
-			<li><a href="/resources" class="">Resources</a></li>
+			
+			<li><a href="/resources" class="">Resources</a>
+				<ul>
+					<li><a href="/faq" class="">FAQ</a></li>
+				</ul>
+			</li>
 			<li><a href="/post" class="">Blog</a></li>
 			<li><a href="/contact" class="">Contact</a></li>
 		</ul>
@@ -36,7 +41,11 @@
 					<li><a href="/communities" class="">Communities</a></li>
 				</ul>
 			</li>
-			<li><a href="/resources" class="">Resources</a></li>
+			<li><a href="/resources" class="">Resources</a>
+				<ul>
+					<li><a href="/faq" class="">FAQ</a></li>
+				</ul>
+			</li>
 			<li><a href="/post" class="">Blog</a></li>
 			<li><a href="/contact" class="">Contact</a></li>
 		</ul>
