faq search bar mobile

--- a/site/layouts/section/faq.html
+++ b/site/layouts/section/faq.html
@@ -15,9 +15,9 @@
 </div>
 <div class="mw7 center ph3">
 <form method="get" action="" id="faq_form">
-<div>
-  <input class="" type="search" name="faq_query" id="faq_query" value="" placeholder="Search FAQ" />
-  <button class="btn w-100 w-auto-ns raise" type="submit" name="search_faq" id="search_faq">Search</button>
+<div class="flex flex-row">
+  <input class="flex-auto" type="search" name="faq_query" id="faq_query" value="" placeholder="Search FAQ" />
+  <button class="btn" type="submit" name="search_faq" id="search_faq">Search</button>
 </div>
 </form>
 </div>
