bottom join and img on home page

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -6,7 +6,7 @@
 
 {{ partial "2-up" .Params }}
 
-{{ partial "text-and-image" (dict "heading" .Params.about.heading "text" .Params.about.text "buttonText" "Read more" "buttonLink" "/about") }}
+{{ partial "text-and-image" (dict "heading" .Params.about.heading "text" .Params.about.text "buttonText" "Join" "buttonLink" "/join") }}
 
 {{/* {{ partial "blog" . }} */}}
 
