sponsor and supporter join nav

--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -17,6 +17,8 @@
 			<li><a href="/about" class="">About</a></li>
 			<li><a href="/join" class="">Join</a>
 				<ul>
+					<li><a href="/sponsoring_member" class="">Sponsoring Member</a></li>
+					<li><a href="/supporters" class="">Supporters</a></li>
 					<li><a href="/ambassadors" class="">Ambassadors</a></li>
 					<li><a href="/communities" class="">Communities</a></li>
 				</ul>
@@ -37,6 +39,8 @@
 			<li><a href="/about" class="">About</a></li>
 			<li><a href="/join" class="">Join</a>
 				<ul>
+					<li><a href="/sponsoring_member" class="">Sponsoring Member</a></li>
+					<li><a href="/supporters" class="">Supporters</a></li>
 					<li><a href="/ambassadors" class="">Ambassadors</a></li>
 					<li><a href="/communities" class="">Communities</a></li>
 				</ul>
