--- a/site/layouts/section/supporters.html
+++ b/site/layouts/section/supporters.html
@@ -8,30 +8,18 @@
 		<h2 class="f2 b lh-title mb2">{{.heading}}</h2>
 		<p class="mb4 mw6">{{.description | markdownify}}</p>
 	</div>
+    {{ if .logos }}
+    <div class="mw7 center flex flex-row flex-wrap mb4">
+      {{ range .logos }}
+      <div class="w-100 w-33-ns ph1-ns"><img src="{{ .image }}" alt="{{ .alt }}" /></div>
+      {{ end }}
+    </div>
+    {{ end }}
   {{ end }}
 </div>
 
-<div class="pt4 pb4">
-{{ partial "blockquote" (index .Params.testimonials 1) }}
-</div>
-
-{{ partial "table" .Params.pricing }}
-
-<div class="tc">
+<div class="tc mb4">
 <a href="/contact" class="btn w-100 w-auto-ns raise" >Contact Us To Join</a>
-</div>
-
-<div class="pt4 pb4">
-  {{ partial "blockquote" (index .Params.testimonials 0) }}
-</div>
-
-<!-- Full-width image -->
-<img src="{{ .Params.full_image }}" alt="" class="db w-100">
-
-{{ partial "4-up" .Params.intro }}
-
-<div class="tc mb3">
-<a href="/contact" class="btn w-100 w-auto-ns raise" >Join Now</a>
 </div>
 
 {{ end }}
