--- a/site/layouts/section/join.html
+++ b/site/layouts/section/join.html
@@ -11,11 +11,21 @@
   {{ end }}
 </div>
 
-<div>
-<table class="center">
-	<tr><td class="tl pv2 ph5"><a href="/sponsoring_member">SPONSORING MEMBER</a></td><td class="tr pv2 ph5"><a href="/supporters">SUPPORTERS</a></td><tr>
-	<tr><td class="tl pv2 ph5"><a href="/communities">COMMUNITIES</a></td><td class="tr pv2 ph5"><a href="/ambassadors">AMBASSADORS</a></td></tr>
-</table>
+<div class="bg-off-white pt4">
+	<div class="mw7 center flex flex-row flex-wrap mb4">
+		<div class="w-100 w-50-ns">
+			<a class="btn-link" href="/sponsoring_member">SPONSORING MEMBER</a>
+		</div>
+		<div class="w-100 w-50-ns">
+			<a class="btn-link" href="/supporters">SUPPORTERS</a>
+		</div>
+		<div class="w-100 w-50-ns">
+			<a class="btn-link" href="/communities">COMMUNITIES</a>
+		</div>
+		<div class="w-100 w-50-ns">
+			<a class="btn-link" href="/ambassadors">AMBASSADORS</a>
+		</div>
+	</div>
 </div>
 
 <div class="pt4 pb4">
