fix ambassador images

--- a/site/layouts/partials/left-image-and-text.html
+++ b/site/layouts/partials/left-image-and-text.html
@@ -3,7 +3,7 @@
 		<div class="flex flex-column flex-row-sm items-start">
 
 			<div class="w4 order-0 mr2">
-				{{ if .imageUr }}<img src={{.imageUrl}} alt="" class="mr2">{{ end }}
+				{{ if .imageUrl }}<img src={{.imageUrl}} alt="" class="mr2">{{ end }}
 			</div>
 			<div class="w-80 order-2">
 				<h3 class="f3 b lh-title mb1">{{.heading}}
