--- a/site/layouts/section/voice_interoperability_form.html
+++ b/site/layouts/section/voice_interoperability_form.html
@@ -7,7 +7,7 @@
 {{/* <form name="voice_interoperability_form" method="POST" data-netlify="true" action=""> */}}
 <form action="" name="voice_interoperability_form" netlify>
   <input type="hidden" name="form-name" value="voice_interoperability_form" />
-  <div class="flex-l mhn1-l">
+  <div class="">
     
     <div>Workshop on Voice Application Interoperability Submission Form</div>
     <div>Full name <input type="text" name="Full_name" value="" placeholder="Full name" class="" /></div>
