add file and text area to form

--- a/site/layouts/section/voice_interoperability_form.html
+++ b/site/layouts/section/voice_interoperability_form.html
@@ -9,24 +9,26 @@
   <input type="hidden" name="form-name" value="voice_interoperability_form" />
   <div class="">
     
-    <div>Workshop on Voice Application Interoperability Submission Form</div>
-    <div>Full name <input type="text" name="Full_name" value="" placeholder="Full name" class="" /></div>
-    <div>Affiliation <input type="text" name="Affiliation" value="" placeholder="Affiliation" class="" /></div>
-    <div>E-mail address <input type="text" name="E-mail_Address" value="" placeholder="E-mail address" class="" /></div>
-    <div>Mail address:  </div>
-    <div>Street <input type="text" name="Street" value="" placeholder="Street" cStreetlass="" /></div>
-    <div>City <input type="text" name="City" value="" placeholder="City" class="" /></div>
-    <div>State/Province <input type="text" name="State_Province" value="" placeholder="State/Province" class="" /></div>
-    <div>Country <input type="text" name="Country" value="" placeholder="Country" cCountrylass="" /></div>
-    <div>Zip Code <input type="text" name="Zip_Code" value="" placeholder="Zip Code" class="" /></div>
-    <div>Phone number (with country code) <input type="text" name="Phone number (with country code)" value="" placeholder="Phone number (with country code)" class="" /></div>
-    <div>Short bio (< 50 words) <input type="text" name="Short_bio" value="" placeholder="Short bio (< 50 words)" class="" /></div>
-    <div>Proposed Presentation abstract (<150 words)<input type="text" name="Proposed_Presentation_abstract" value="" placeholder="Proposed Presentation abstract (<150 words)" class="" /></div>
-    <div>Proposed Topic for panel discussion <input type="text" name="Proposed_Topic_for_panel_discussion" value="" placeholder="Proposed Topic for panel discussion" class="" /></div>
-    <div>Submit by April Something or Other</div>
+    <div class="mv2">Workshop on Voice Application Interoperability Submission Form</div>
+    <div class="mv2">Full name <input type="text" name="Full_name" value="" placeholder="Full name" class="" /></div>
+    <div class="mv2">Affiliation <input type="text" name="Affiliation" value="" placeholder="Affiliation" class="" /></div>
+    <div class="mv2">E-mail address <input type="text" name="E-mail_Address" value="" placeholder="E-mail address" class="" /></div>
+    <div class="mv2">Mail address:  </div>
+    <div class="mv2">Street <input type="text" name="Street" value="" placeholder="Street" cStreetlass="" /></div>
+    <div class="mv2">City <input type="text" name="City" value="" placeholder="City" class="" /></div>
+    <div class="mv2">State/Province <input type="text" name="State_Province" value="" placeholder="State/Province" class="" /></div>
+    <div class="mv2">Country <input type="text" name="Country" value="" placeholder="Country" cCountrylass="" /></div>
+    <div class="mv2">Zip Code <input type="text" name="Zip_Code" value="" placeholder="Zip Code" class="" /></div>
+    <div class="mv2">Phone number (with country code) <input type="text" name="Phone number (with country code)" value="" placeholder="Phone number (with country code)" class="" /></div>
+    <div class="mv2">Short bio (< 50 words) <input type="text" name="Short_bio" value="" placeholder="Short bio (< 50 words)" class="" /></div>
+    <div class="mv2">Proposed Presentation abstract (&lt; 150 words)<br />
+      <textarea name="Proposed_Presentation_abstract" class=""></textarea>
+      </div>
+    <div class="mv2">Proposed Topic for panel discussion <input type="file" name="Proposed_Topic_for_panel_discussion" accept=".pdf,.doc,.docx,.txt" /></div>
+    <div class="mv2">Submit by April Something or Other</div>
     
     <!-- Button -->
-    <div class="tc">
+    <div class="tc mb6">
       <button type="submit" class="btn w-100 w-auto-ns raise">Submit</button>
     </div>
 
