--- a/site/layouts/section/voice_interoperability_form.html
+++ b/site/layouts/section/voice_interoperability_form.html
@@ -20,7 +20,9 @@
     <div class="mv2">Country <input type="text" name="Country" value="" placeholder="Country" cCountrylass="" /></div>
     <div class="mv2">Zip Code <input type="text" name="Zip_Code" value="" placeholder="Zip Code" class="" /></div>
     <div class="mv2">Phone number (with country code) <input type="text" name="Phone number (with country code)" value="" placeholder="Phone number (with country code)" class="" /></div>
-    <div class="mv2">Short bio (< 50 words) <input type="text" name="Short_bio" value="" placeholder="Short bio (< 50 words)" class="" /></div>
+    <div class="mv2">Short bio (< 50 words) <br />
+      <textarea name="Short_bio" class=""></textarea>
+    </div>
     <div class="mv2">Proposed Presentation abstract (&lt; 150 words)<br />
       <textarea name="Proposed_Presentation_abstract" class=""></textarea>
       </div>
