workshops, name and deadline

--- a/site/layouts/section/voice_interoperability_form.html
+++ b/site/layouts/section/voice_interoperability_form.html
@@ -9,7 +9,7 @@
   <input type="hidden" name="form-name" value="voice_interoperability_form" />
   <div class="">
     
-    <div class="mv2">Workshop on Voice Application Interoperability Submission Form</div>
+    <div class="mv2">Voice Agent Interoperability Workshop Submission Form</div>
     <div class="mv2">Full name <input type="text" name="Full_name" value="" placeholder="Full name" class="" /></div>
     <div class="mv2">Affiliation <input type="text" name="Affiliation" value="" placeholder="Affiliation" class="" /></div>
     <div class="mv2">E-mail address <input type="text" name="E-mail_Address" value="" placeholder="E-mail address" class="" /></div>
@@ -27,6 +27,8 @@
       <textarea name="Proposed_Presentation_abstract" class=""></textarea>
       </div>
     <div class="mv2">Proposed Topic for panel discussion <input type="file" name="Proposed_Topic_for_panel_discussion" accept=".pdf,.doc,.docx,.txt" /></div>
+    <div class="mv2">Submit by 30 April 2021.</div>
+    
     <!-- Button -->
     <div class="tc mb6">
       <button type="submit" class="btn w-100 w-auto-ns raise">Submit</button>
