paper list and nav link

--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -30,6 +30,7 @@
 				</ul>
 			</li>
 			<li><a href="/post" class="">Blog</a></li>
+			<li><a href="/paper" class="">Papers</a></li>
 			<li><a href="/voice_interoperability_form" class="">Workshops</a></li>
 			<li><a href="/contact" class="">Contact</a></li>
 		</ul>
@@ -52,6 +53,7 @@
 				</ul>
 			</li>
 			<li><a href="/post" class="">Blog</a></li>
+			<li><a href="/paper" class="">Papers</a></li>
 			<li><a href="/voice_interoperability_form" class="">Workshops</a></li>
 			<li><a href="/contact" class="">Contact</a></li>
 		</ul>
