--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -17,6 +17,7 @@
 			<li><a href="/about" class="">About</a>
 				<ul>
 					<li><a href="/ambassadors" class="">Ambassadors</a></li>
+					<li><a href="/industry-advisor-council" class="">Industry Advisor Council</a></li>
 				</ul>
 			</li>
 			<li><a href="/join" class="">Join</a>
@@ -43,6 +44,7 @@
 			<li><a href="/about" class="">About</a>
 				<ul>
 					<li><a href="/ambassadors" class="">Ambassadors</a></li>
+					<li><a href="/industry-advisor-council" class="">Industry Advisor Council</a></li>
 				</ul>
 			</li>
 			<li><a href="/join" class="">Join</a>
