--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -34,7 +34,7 @@
 				</ul>
 			</li>
 			<li><a href="/post" class="">Blog</a></li>
-			<li><a href="/paper" class="">Papers</a></li>
+			<!-- <li><a href="/paper" class="">Papers</a></li> -->
 			<li><a href="/voice_interoperability_form" class="">Workshops</a></li>
 			<li><a href="/contact" class="">Contact</a></li>
 		</ul>
@@ -61,7 +61,7 @@
 				</ul>
 			</li>
 			<li><a href="/post" class="">Blog</a></li>
-			<li><a href="/paper" class="">Papers</a></li>
+			<!-- <li><a href="/paper" class="">Papers</a></li> -->
 			<li><a href="/voice_interoperability_form" class="">Workshops</a></li>
 			<li><a href="/contact" class="">Contact</a></li>
 		</ul>
