OVN to Open Voice Network

--- a/site/layouts/partials/contact-form.html
+++ b/site/layouts/partials/contact-form.html
@@ -24,7 +24,7 @@
       <select class="br1 w-100 db h2 f6 bg-grey-2 b--grey-2" name="interested" id="interested">
         <option value="">Interest In</option>
         <option value="Become a Sponsoring Member or Supporter">Become a Sponsoring Member or Supporter</option>
-        <option value="If You're a Supporter: Join an OVN Community">If You're a Supporter: Join an OVN Community</option>
+        <option value="If You're a Supporter: Join an Open Voice Network Community">If You're a Supporter: Join an Open Voice Network Community</option>
         <option value="Share Research">Share Research</option>
         <option value="News Media Inquiry">News Media Inquiry</option>
       </select>
