--- a/site/layouts/section/join.html
+++ b/site/layouts/section/join.html
@@ -17,7 +17,7 @@
 			<a class="btn-link" href="/sponsoring_member">SPONSORING MEMBER</a>
 		</div>
 		<div class="w-100 w-50-ns">
-			<a class="btn-link" href="/friends-of-the-open-voice-network">FRIENDS OF OVN</a>
+			<a class="btn-link" href="/friends-of-the-open-voice-network">FRIENDS OF THE OPEN VOICE NETWORK</a>
 		</div>
 		<div class="w-100 w-50-ns">
 			<a class="btn-link" href="/communities">COMMUNITIES</a>
