--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -23,7 +23,7 @@
 			<li><a href="/join" class="">Join</a>
 				<ul>
 					<li><a href="/sponsoring_member" class="">Sponsoring Member</a></li>
-					<li><a href="/friends-of-the-open-voice-network" class="">Friends of The Open Voice Network</a></li>
+					<li><a href="/friends-of-the-open-voice-network" class="">Friends of the Open Voice Network</a></li>
 					<li><a href="/communities" class="">Communities</a></li>
 				</ul>
 			</li>
@@ -51,7 +51,7 @@
 			<li><a href="/join" class="">Join</a>
 				<ul>
 					<li><a href="/sponsoring_member" class="">Sponsoring Member</a></li>
-					<li><a href="/friends-of-the-open-voice-network" class="">Friends of The Open Voice Network</a></li>
+					<li><a href="/friends-of-the-open-voice-network" class="">Friends of the Open Voice Network</a></li>
 					<li><a href="/communities" class="">Communities</a></li>
 				</ul>
 			</li>
