voice chats page

--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -31,6 +31,7 @@
 			<li><a href="/resources" class="">Resources</a>
 				<ul>
 					<li><a href="/faq" class="">FAQ</a></li>
+					<li><a href="/voice-chats" class="">Voice Chats</a></li>
 				</ul>
 			</li>
 			<li><a href="/post" class="">Blog</a></li>
@@ -58,6 +59,7 @@
 			<li><a href="/resources" class="">Resources</a>
 				<ul>
 					<li><a href="/faq" class="">FAQ</a></li>
+					<li><a href="/voice-chats" class="">Voice Chats</a></li>
 				</ul>
 			</li>
 			<li><a href="/post" class="">Blog</a></li>
