--- a/site/layouts/section/friends-of-the-open-voice-network.html
+++ b/site/layouts/section/friends-of-the-open-voice-network.html
@@ -3,23 +3,26 @@
 {{ partial "jumbotron" (dict "imageUrl" .Params.image "title" .Title) }}
 
 <div class="bg-off-white pt4">
-  {{ range .Params.hardsell }}
-	<div class="mw7 center">
-		<h2 class="f2 b lh-title mb2">{{.heading}}</h2>
-		<p class="mb4 mw6">{{.description | markdownify}}</p>
+  <div class="mw7 center">
+		<h2 class="f2 b lh-title mb2">{{.Params.top.heading}}</h2>
+		<p class="mb4 mw6">{{.Params.top.description | markdownify}}</p>
 	</div>
-    {{ if .logos }}
-    <div class="mw7 center flex flex-row flex-wrap mb4">
-      {{ range .logos }}
-      <div class="w-100 w-33-ns ph1-ns">
-        <a href="{{ .link }}" target="_blank">
-        <img src="{{ .image }}" alt="{{ .alt }}" />
-        </a>
-      </div>
-      {{ end }}
+
+  <div class="mw7 center flex flex-row flex-wrap mb4">
+    {{ range .Params.logos }}
+    <div class="w-100 w-33-ns ph1-ns">
+      <a href="{{ .link }}" target="_blank">
+      <img class="w-100" style="height: 282px;" src="{{ .image }}" alt="{{ .alt }}" />
+      </a>
     </div>
     {{ end }}
-  {{ end }}
+  </div>
+
+  <div class="mw7 center">
+		<h2 class="f2 b lh-title mb2">{{.Params.bottom.heading}}</h2>
+		<p class="mb4 mw6">{{.Params.bottom.description | markdownify}}</p>
+	</div>
+  
 </div>
 
 <div class="tc mb4">
