calendar from google embed

--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -32,6 +32,7 @@
 				<ul>
 					<li><a href="/faq" class="">FAQ</a></li>
 					<li><a href="/voice-chats" class="">Voice Chats</a></li>
+					<li><a href="/calendar" class="">Calendar</a></li>
 				</ul>
 			</li>
 			<li><a href="/post" class="">Blog</a></li>
@@ -60,6 +61,7 @@
 				<ul>
 					<li><a href="/faq" class="">FAQ</a></li>
 					<li><a href="/voice-chats" class="">Voice Chats</a></li>
+					<li><a href="/calendar" class="">Calendar</a></li>
 				</ul>
 			</li>
 			<li><a href="/post" class="">Blog</a></li>
